updated for dust/dustmasker

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -1,9 +1,9 @@
 
 [GLOBAL]
-scratch_dir=/usr/local/scratch/METAGENOMICS
+scratch_dir=/media/sf_Scratch4TB
 
 [FASTQ_Tools]
-Path=/usr/local/devel/DAS/users/kli/SVN/DAS/FASTQTools
+Path=~/git/AnalysisTools/FASTQ
 
 SplitFASTQ_bin=Split_Fastq/Split_Fastq.pl
 note1= -f <input fastq> -a <output fasta>
@@ -18,7 +18,7 @@ Report_FASTQ_Stats_bin=Report_Fastq_Stats/Report_FASTQ_Stats.pl
 note4= -f <input fastq file> -h (no header flag)
 
 [subsample]
-bin=/usr/local/devel/DAS/users/kli/SVN/DAS/FASTQTools/Randomly_Sample/Randomly_Sample_from_FASTQ.pl
+bin=~/git/Randomly_Sample/Randomly_Sample_from_FASTQ.pl
 sample_size=5000
 
 notes1= -n <sample size> -s <random number seed>
@@ -33,7 +33,7 @@ notes1=ftp://ftp.ncbi.nlm.nih.gov/pub/agarwala/bmtagger/README
 notes2=bmtagger.sh requires bmfilter, srprism, ncbi-blast+'s blastn and extract_fullseq to be in your PATH
 
 [dust_screen]
-bin=/usr/local/bin/dust
+bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/blast/ncbi-blast-2.2.30+/bin/dustmasker
 cutoff=.80
 
 [quality_trim]
