updated cutadapt path

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -45,7 +45,7 @@ notes1=http://hannonlab.cshl.edu/fastx_toolkit/commandline.html#fastq_quality_fi
 notes2= -t <quality threshold> -l <minimum length>
 
 [adapter_trim]
-bin=/usr/bin/env python /usr/local/devel/BCIS/external_software/cutadapt-1.0/cutadapt
+bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/cutadapt/cutadapt-1.8.1/bin/cutadapt
 # use -b for both ends
 # use --match-read-wildcards to match N's
 
