updated random sampling path

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -18,7 +18,7 @@ Report_FASTQ_Stats_bin=Report_Fastq_Stats/Report_FASTQ_Stats.pl
 note4= -f <input fastq file> -h (no header flag)
 
 [subsample]
-bin=~/git/Randomly_Sample/Randomly_Sample_from_FASTQ.pl
+bin=~/git/AnalysisTools/FASTQ/Randomly_Sample/Randomly_Sample_from_FASTQ.pl
 sample_size=5000
 
 notes1= -n <sample size> -s <random number seed>
@@ -37,7 +37,10 @@ bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/blast/ncbi-blast-2.2.30+/b
 cutoff=.80
 
 [quality_trim]
-bin=/usr/bin/fastq_quality_trimmer
+# Downloaded 
+bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/fastx_toolkit/bin/fastq_quality_trimmer
+# PSC
+#bin=/opt/packages/fastx/fastx_toolkit-0.0.14/bin/fastq_quality_trimmer
 quality_threshold=30
 minimum_length=75
 
