updated to work with generic location

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -1,6 +1,6 @@
 
 [GLOBAL]
-scratch_dir=/media/sf_Scratch4TB
+scratch_dir=~/scratch_link
 
 [FASTQ_Tools]
 Path=~/git/AnalysisTools/FASTQ
@@ -24,10 +24,10 @@ sample_size=5000
 notes1= -n <sample size> -s <random number seed>
 
 [contaminant_screen]
-bin=/usr/local/bin/bmtagger.sh
-reference_srprism=/usr/local/devel/DAS/users/kli/SVN/DAS/Read_QC_Pipeline/References/hs_ref_GRCh38.p2_allChr.srprism
-reference_bitmask=/usr/local/devel/DAS/users/kli/SVN/DAS/Read_QC_Pipeline/References/hs_ref_GRCh38.p2_allChr.bitmask
-reference_blastdb=/usr/local/devel/DAS/users/kli/SVN/DAS/Read_QC_Pipeline/References/hs_ref_GRCh38.p2_allChr.fa
+bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/bmtools/bmtools/bmtagger/bmtagger.sh
+reference_srprism=~/git/AnalysisTools/Read_QC_Pipeline/References/hs_ref_all.srprism
+reference_bitmask=~/git/AnalysisTools/Read_QC_Pipeline/References/hs_ref_all.bitmask
+reference_blastdb=~/git/AnalysisTools/Read_QC_Pipeline/References/hs_ref_all.fa
 
 notes1=ftp://ftp.ncbi.nlm.nih.gov/pub/agarwala/bmtagger/README
 notes2=bmtagger.sh requires bmfilter, srprism, ncbi-blast+'s blastn and extract_fullseq to be in your PATH
