modified to add quality filter after quality trim

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -38,14 +38,26 @@ cutoff=.80
 
 [quality_trim]
 # Downloaded 
-bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/fastx_toolkit/bin/fastq_quality_trimmer
-# PSC
-#bin=/opt/packages/fastx/fastx_toolkit-0.0.14/bin/fastq_quality_trimmer
-quality_threshold=30
-minimum_length=75
+bin_trim=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/fastx_toolkit/bin/fastq_quality_trimmer
+bin_filt=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/fastx_toolkit/bin/fastq_quality_filter
 
-notes1=http://hannonlab.cshl.edu/fastx_toolkit/commandline.html#fastq_quality_filter_usage
-notes2= -t <quality threshold> -l <minimum length>
+# PSC
+#bin_trim=/opt/packages/fastx/fastx_toolkit-0.0.14/bin/fastq_quality_trimmer
+#bin_filt=/opt/packages/fastx/fastx_toolkit-0.0.14/bin/fastq_quality_filter
+
+# trim from 3' end until qv above this value
+trim_quality_threshold=15
+# min bp of trimmed sequence to still keep
+trim_minimum_length=75
+
+# filter quality threshold
+filt_quality_threshold=15
+# percent of bases that must be above filter quality	
+filt_percent_above=95
+
+notes1= -t <quality threshold> -l <minimum length>
+notes2=http://hannonlab.cshl.edu/fastx_toolkit/commandline.html#fastq_quality_filter_usage
+notes3= -q <quality threshold> -p <minimum percentage>
 
 [adapter_trim]
 bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/cutadapt/cutadapt-1.8.1/bin/cutadapt
