updated with annot paths

--- a/Annotation/AnnotPipeline/annot_pipeline.ini
+++ b/Annotation/AnnotPipeline/annot_pipeline.ini
@@ -1,24 +1,29 @@
-[databases]
-UniProtFasta=
-TrEMBL_Annotation=
-NCBI_Taxa=
+[annotation_data]
+TrEMBLE_annotation=/mnt/data/databases/TrEMBL/tremble_data.tsv
 
-[blast_options]
-aligner=ncbi_blast
-#aligner=diamond
+ncbi_taxa_nodes=/mnt/data/databases/NCBI_Taxonomy/nodes.tsv
+ncbi_taxa_names=/mnt/data/databases/NCBI_Taxonomy/names.tsv
+ncbi_taxa_levels=/mnt/data/databases/NCBI_Taxonomy/levels.tsv
 
-program=blastx
-db=[databases]:UniProtFasta
-eval=1e-10
-dbsize=3e10
-num_threads=4
+ec_mapping=~/git/AnalysisTools/Function/EC_Mapping/EC_Info.tsv
+go_mapping=~/git/AnalysisTools/Function/GO_Mapping/GO_Info.tsv
+pfam_mapping=~/git/AnalysisTools/Function/PFam_Mapping/PFam_Info.tsv
+tigrfam_mapping=~/git/AnalysisTools/Function/TIGRFAM_Mapping/TIGR_Info.tsv
 
-blastx_bin=blastx;
-diamond_bin=diamond;
+[annotation_bin]
+# alignment post processing
+perc_comp_id_bin=~/git/AnalysisTools/Column/generate_perc_comp_id_on_BLAST_results.pl
+join_aln_w_clst_anno_bin=~/git/AnalysisTools/Column/remap_column_values.pl
 
+# taxonomy
+estimate_taxa_bin=~/git/AnalysisTools/Annotation/Estimate_Taxa_from_Alignment/Estimate_Taxa_from_Alignment.pl
+get_high_taxa_levels_bin=~/git/AnalysisTools/Annotation/Estimate_Taxa_from_Alignment/Get_Higher_Levels.pl
+taxa_levels_to_st_bin=~/git/AnalysisTools/Annotation/TaxaLevels_to_SummaryTable/TaxaLevels_to_SummaryTable.pl
 
-
-[output]
-OutputDirectory=
+# function
+accumulate_annot_bin=~/git/AnalysisTools/Annotation/Accumulate_Evidence_Across_Hits/Accumulate_Evidence_Across_Hits.pl
+filter_annot_by_taxa_bin=~/git/AnalysisTools/Annotation/Filter_Annotation_By_TaxaID/Filter_Annotation_By_TaxaID.pl
+annot_to_st_bin=~/git/AnalysisTools/Annotation/Annotation_to_SummaryTable/Annotation_to_SummaryTable.pl
+rename_st_ids_bin=~/git/AnalysisTools/Profile/SummaryTableUtilities/Rename_Summary_Table_Categories.pl
 
 
