cleaned up required parameters

--- a/Annotation/AnnotPipeline/Assign_Annotation/annot_pipeline.ini
+++ b/Annotation/AnnotPipeline/Assign_Annotation/annot_pipeline.ini
@@ -1,5 +1,5 @@
 [annotation_data]
-TrEMBLE_annotation=/mnt/data/databases/TrEMBL/tremble_data.tsv
+TrEMBL_annotation=/mnt/data/databases/TrEMBL/tremble_data.tsv
 
 ncbi_taxa_nodes=/mnt/data/databases/NCBI_Taxonomy/nodes.tsv
 ncbi_taxa_names=/mnt/data/databases/NCBI_Taxonomy/names.tsv
@@ -9,6 +9,10 @@ ec_mapping=~/git/AnalysisTools/Function/EC_Mapping/EC_Info.tsv
 go_mapping=~/git/AnalysisTools/Function/GO_Mapping/GO_Info.tsv
 pfam_mapping=~/git/AnalysisTools/Function/PFam_Mapping/PFam_Info.tsv
 tigrfam_mapping=~/git/AnalysisTools/Function/TIGRFAM_Mapping/TIGR_Info.tsv
+
+[configuration]
+cutoffs=45,60,75,90
+temporary_directory=~/scratch_link
 
 [annotation_bin]
 # alignment post processing
