moved to archive

--- a/Read_QC_Pipeline/ExampleRuns/SimpleExampleRun/example_read_qc.ini
+++ b/Read_QC_Pipeline/ExampleRuns/SimpleExampleRun/example_read_qc.ini
@@ -95,8 +95,8 @@ reverse=CAAGCAGAAGACGGCATACGAGAT NNNNNN GTGACTGGAGTTCAGACGTGTGCTCTTCCGATCA
 
 [primer_trim]
 # COPY from below, do not delete comments...
-forward=[]
-reverse=[]
+forward=CCTACGGGAGGCAGCAG
+reverse=GGACTACHVGGGTWTCTAAT
 
 # V4 16S Primers (F515/R806)
 # F515
