added tmp directory to config for dimaond tempdir

--- a/Annotation/AnnotPipeline/Generate_Alignments/examples/test_annot_pipeline.ini
+++ b/Annotation/AnnotPipeline/Generate_Alignments/examples/test_annot_pipeline.ini
@@ -1,24 +1,34 @@
-[databases]
-UniProtFasta=
-TrEMBL_Annotation=
-NCBI_Taxa=
+[global]
+scratch_dir=/mnt/scratch
 
 [blast_options]
-aligner=ncbi_blast
-#aligner=diamond
+#aligner=ncbi_blast
+aligner=diamond
 
+#program=blastn
 program=blastx
-db=[databases]:UniProtFasta
+
+# Shared parameters
 eval=1e-10
 dbsize=3e10
 num_threads=4
 
-blastx_bin=blastx;
-diamond_bin=diamond;
+blastx_bin=/usr/bin/blastx
+blastn_bin=/usr/bin/blastn
+blast_db=/mnt/data/databases/UniProt/UniRef90/2017_06/blast_db/uniref90.fasta
 
+diamond_bin=/usr/bin/diamond
+diamond_db=/scratch3/Database/Uniref90/diamond_db/uniref90.dmnd
 
+[tools]
+fasta_length_bin=~/git/AnalysisTools/FASTA/Compute_Sequence_Lengths_For_FASTA.pl
+perc_comp_id_bin=~/git/AnalysisTools/Column/generate_perc_comp_id_on_BLAST_results.pl
 
-[output]
-OutputDirectory=
+[annotation_data]
+TrEMBL_file=
 
+[annotation_bin]
+#join_subj_w_annotation_bin
+#accumulate_evidence_bin
+#estimate_taxa_bin
 
