added absolute trimming

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -160,3 +160,21 @@ alignment_length_threshold=50
 database_list=rrnadb
 
 notes1= -i <alignment_identity_threshold> -c <alignment_coverage_threshold> -l <alignment_length_threshold> -dbs <database>
+
+[absolute_trim]
+bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/fastx_toolkit/bin/fastx_trimmer
+keep_start_1based=1
+keep_end_1based=Inf
+
+# 1 2 3 4 5 6
+# A T G C G C
+# 
+# Keeping start=2 and end=5, would result in TGCG
+# Inf will not trim anything from end of sequence
+
+
+
+
+
+
+
