added length filter

--- a/Read_QC_Pipeline/read_qc.ini
+++ b/Read_QC_Pipeline/read_qc.ini
@@ -172,7 +172,11 @@ keep_end_1based=Inf
 # Keeping start=2 and end=5, would result in TGCG
 # Inf will not trim anything from end of sequence
 
-
+[length_filt]
+bin=~/git/AnalysisTools/Read_QC_Pipeline/Dependencies/Filter_Sequences_by_SeqLength.pl
+min_length=0
+max_length=Inf
+notes1=-f <fasta> -n <minlen> -x <maxlen>
 
 
 
